Use collectors toList instead of bare toList